# gsm-data-generator-gui

./: ELECT.csv  GRAPH.csv  LICENSE  README.md  SERVER.csv  elects.csv  keys.json  main.py  pydantic_test.ipynb  pyinstaller-command.json  pyproject.toml  requirements.txt  settings.json  temp.csv
core/: STCAppScriptV6-bk1.py  STCAppScriptV6.py  STCAppScriptV6Original.py  __init__.py  database_operations.py  json_parameters.py  json_utils.py  main.py  message.py  my_sql_database.py  script.py  settings.json  settings.py  source.py  styleSheets.py  temp.csv  temp_elect.csv  temp_graph.csv  temp_server.csv  test.py
core/exception/: exceptions.py
core/executor/: __init__.py  script.py  settings.json  temp_elect.csv  temp_graph.csv  temp_server.csv  utils.py
core/generator/: script.py  utils.py
core/parser/: pydantic.ipynb  temp.csv  utils.py
core/tests/: aaa.csv  bbb.csv  executtor_test.py  parser_test.py
data/output_files/: DATA_N2023031016844011.txt  N2023031016844011.out
data/templates/: N2023031016844011-laser.img
forms/: login_ui.py  main.ui  signup.ui
globals/: __init__.py  parameters.py  settings.py
gui/: __init__.py  main.py  messages.py  screens.py  settings.py  source.py  table.py  test.csv  ulits.py  utils.py
gui/auth/: utils.py
output_files/: LASER_N2023031016844011.txt
output_files1/: TP15209.csv  TP15209.txt
resources/: resources.qrc
src/: main.py  settings.json
templates/: N2023031016844011 - Copy.txt  N2023031016844011-data.img  N2023031016844011.txt  N2023031016844011_EKI-server.out
tests/: core_generator_test.py
(+80 files in other folders)
